update dashboard to show youths only, filtering out adults
